--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ bin/
 *.iml
 out
 gen
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
